3.0.2:
  Allow override of config
  Add consul checks
3.0.1:
  Fix anonymous access and case where web/local_endpoint is not defined in config.yml
3.0.0:
  FTP server to access banks