@@ -1,6 +1,8 @@
 3.0.2:
   Allow override of config
   Add consul checks
+  Fix user authentication
+  Load database settings from global.properties to match same database than biomaj
 3.0.1:
   Fix anonymous access and case where web/local_endpoint is not defined in config.yml
 3.0.0:
